Fix card images stretching 3

--- a/styles.css
+++ b/styles.css
@@ -318,7 +318,7 @@ a{
 
 .card_image{
     border-radius: 50%;
-    background-size: cover; 
+ /*   background-size: cover; */
     z-index: 5;
 }
 
